Fixing alignments

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1363,6 +1363,7 @@ input[type="submit"] {
         width: 20%;
         margin: 0 2%;
         padding: 0;
+        vertical-align: top;
 
         img {
           width: 40px;
